--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2793,73 +2793,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removing black images:   0%|          | 0/155000 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Removing black images:   0%|          | 0/155000 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'float' and 'JpegImageFile'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 34\u001b[0m\n\u001b[1;32m     31\u001b[0m mask_folder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m/media/user_home0/srodriguez47/ddpm/BraTS2023_StructuredData/BraTS2023_AxialSlices/Train/Mask\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;66;03m# Remove black images from 'Data' folder and corresponding images in 'Mask' folder\u001b[39;00m\n\u001b[0;32m---> 34\u001b[0m \u001b[43mremove_black_images\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_folder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask_folder\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBlack images removed.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[4], line 20\u001b[0m, in \u001b[0;36mremove_black_images\u001b[0;34m(data_folder, mask_folder)\u001b[0m\n\u001b[1;32m     17\u001b[0m img \u001b[38;5;241m=\u001b[39m Image\u001b[38;5;241m.\u001b[39mopen(data_path)\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Normalize pixel values between 0 and 1\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m img_array \u001b[38;5;241m=\u001b[39m \u001b[43m(\u001b[49m\u001b[38;5;241;43m1.0\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m255.0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mimg\u001b[49m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Check if the image is completely black\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_black_image(img_array):\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m# Remove the black image and its corresponding mask\u001b[39;00m\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'JpegImageFile'"
+      "Total training slices:  139019\n",
+      "Total test slices:  35028\n",
+      "Total black images in training:  0\n",
+      "Total training slices after removing black images:  139019\n",
+      "Total black images in test:  0\n",
+      "Total test slices after removing black images:  35028\n"
      ]
     }
    ],
    "source": [
     "from PIL import Image\n",
+    "lista_train = \"../BraTS2023_StructuredData/BraTS2023_AxialSlices/Train/Data\"\n",
+    "lista_test = \"../BraTS2023_StructuredData/BraTS2023_AxialSlices/Test/Data\"\n",
+    "lista_total = os.listdir(lista_train)\n",
+    "print(\"Total training slices: \", len(lista_total))\n",
+    "lista_total = os.listdir(lista_test)\n",
+    "print(\"Total test slices: \", len(lista_total))\n",
     "\n",
-    "def is_black_image(img_array, threshold=0.02):\n",
-    "    # Check if the image is completely black based on a threshold\n",
-    "    return img_array.max() < threshold\n",
+    "black_images = []\n",
     "\n",
-    "def remove_black_images(data_folder, mask_folder):\n",
-    "    # List all JPEG files in the 'Data' folder\n",
-    "    data_files = [f for f in os.listdir(data_folder) if f.endswith('.jpg')]\n",
+    "for img_name in os.listdir(lista_train):\n",
+    "    img_path = os.path.join(lista_train, img_name)\n",
+    "    img = Image.open(img_path)\n",
+    "    if not np.any(np.array(img)):\n",
+    "        black_images.append(img_name)\n",
+    "        # delete the black image\n",
+    "        os.remove(img_path)\n",
+    "print(\"Total black images in training: \", len(black_images))\n",
+    "print(\"Total training slices after removing black images: \", len(os.listdir(lista_train)))\n",
+    "black_images_test = []\n",
+    "for img_name in os.listdir(lista_test):\n",
+    "    img_path = os.path.join(lista_test, img_name)\n",
+    "    img = Image.open(img_path)\n",
+    "    if not np.any(np.array(img)):\n",
+    "        black_images_test.append(img_name)\n",
+    "        os.remove(img_path)\n",
     "\n",
-    "    # Iterate through data files and remove black images\n",
-    "    for data_file in tqdm(data_files, desc=\"Removing black images\"):\n",
-    "        data_path = os.path.join(data_folder, data_file)\n",
-    "        mask_path = os.path.join(mask_folder, data_file)\n",
-    "\n",
-    "        # Open the image\n",
-    "        img = Image.open(data_path)\n",
-    "\n",
-    "        # Normalize pixel values between 0 and 1\n",
-    "        img_array = (1.0 / 255.0) * img\n",
-    "\n",
-    "        # Check if the image is completely black\n",
-    "        if is_black_image(img_array):\n",
-    "            # Remove the black image and its corresponding mask\n",
-    "            os.remove(data_path)\n",
-    "            os.remove(mask_path)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Specify the 'Data' and 'Mask' folders\n",
-    "    data_folder = \"/media/user_home0/srodriguez47/ddpm/BraTS2023_StructuredData/BraTS2023_AxialSlices/Train/Data\"\n",
-    "    mask_folder = \"/media/user_home0/srodriguez47/ddpm/BraTS2023_StructuredData/BraTS2023_AxialSlices/Train/Mask\"\n",
-    "\n",
-    "    # Remove black images from 'Data' folder and corresponding images in 'Mask' folder\n",
-    "    remove_black_images(data_folder, mask_folder)\n",
-    "\n",
-    "    print(\"Black images removed.\")\n"
+    "print(\"Total black images in test: \", len(black_images_test))\n",
+    "print(\"Total test slices after removing black images: \", len(os.listdir(lista_test)))\n"
    ]
   }
  ],
@@ -2879,7 +2858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
