removal of images including segmentation

--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2793,18 +2793,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total training slices:  139019\n",
-      "Total test slices:  35028\n",
-      "Total black images in training:  0\n",
+      "Total training slices:  155000\n",
+      "Total test slices:  38905\n",
+      "Total black images in training:  15981\n",
       "Total training slices after removing black images:  139019\n",
-      "Total black images in test:  0\n",
+      "Total black images in test:  3877\n",
       "Total test slices after removing black images:  35028\n"
      ]
     }
@@ -2812,7 +2812,10 @@
    "source": [
     "from PIL import Image\n",
     "lista_train = \"../BraTS2023_StructuredData/BraTS2023_AxialSlices/Train/Data\"\n",
+    "lista_train_seg = \"../BraTS2023_StructuredData/BraTS2023_AxialSlices/Train/Mask\"\n",
     "lista_test = \"../BraTS2023_StructuredData/BraTS2023_AxialSlices/Test/Data\"\n",
+    "lista_test_seg = \"../BraTS2023_StructuredData/BraTS2023_AxialSlices/Test/Mask\"\n",
+    "\n",
     "lista_total = os.listdir(lista_train)\n",
     "print(\"Total training slices: \", len(lista_total))\n",
     "lista_total = os.listdir(lista_test)\n",
@@ -2822,23 +2825,36 @@
     "\n",
     "for img_name in os.listdir(lista_train):\n",
     "    img_path = os.path.join(lista_train, img_name)\n",
+    "    img_path_seg = os.path.join(lista_train_seg, img_name)\n",
     "    img = Image.open(img_path)\n",
     "    if not np.any(np.array(img)):\n",
     "        black_images.append(img_name)\n",
-    "        # delete the black image\n",
     "        os.remove(img_path)\n",
+    "        os.remove(img_path_seg)\n",
     "print(\"Total black images in training: \", len(black_images))\n",
     "print(\"Total training slices after removing black images: \", len(os.listdir(lista_train)))\n",
     "black_images_test = []\n",
     "for img_name in os.listdir(lista_test):\n",
     "    img_path = os.path.join(lista_test, img_name)\n",
+    "    img_path_seg = os.path.join(lista_test_seg, img_name)\n",
     "    img = Image.open(img_path)\n",
     "    if not np.any(np.array(img)):\n",
     "        black_images_test.append(img_name)\n",
     "        os.remove(img_path)\n",
+    "        os.remove(img_path_seg)\n",
     "\n",
     "print(\"Total black images in test: \", len(black_images_test))\n",
     "print(\"Total test slices after removing black images: \", len(os.listdir(lista_test)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(os.listdir(lista_train)) == len(os.listdir(lista_train_seg))\n",
+    "assert len(os.listdir(lista_test)) == len(os.listdir(lista_test_seg))"
    ]
   }
  ],
